Added the images for the portfolio added the other content

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -53,7 +53,9 @@
                     <span>Deep Learning</span>
                 </div>
                 <div class="image">
-                    <img src="assets/images/profile.jpg" alt="Profile" class="profile-image">
+                    <a href="https://linkedin.com/in/tejasyadav1512">
+                    <img src="./assets/images/profile 1.jpg" alt="Profile" class="profile-image">
+                    </a>
                 </div>
                 <div class="hero-cta">
                     <a href="#contact" class="btn primary-btn">Get in Touch</a>
@@ -92,7 +94,16 @@
                             <li>Computer Vision</li>
                             <li>Natural Language Processing</li>
                             <li>Predictive Analytics</li>
-                            <li>Time Series Analysis</li>
+                            <li>Recommendation systems</li>
+                        </ul>
+                    </div>
+                    <div class="expertise-card">
+                        <h3>Web Development</h3>
+                        <ul>
+                            <li>Html</li>
+                            <li>Css</li>
+                            <li>Javascript</li>
+                            <li></li>
                         </ul>
                     </div>
                 </div>
@@ -115,7 +126,7 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-info">
-                            <span>R</span>
+                            <span>Java</span>
                             <span>85%</span>
                         </div>
                         <div class="skill-bar">
@@ -133,7 +144,7 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-info">
-                            <span>Java</span>
+                            <span>C++</span>
                             <span>75%</span>
                         </div>
                         <div class="skill-bar">
@@ -229,52 +240,54 @@
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/images/project1.jpg" alt="AI Project 1">
+                        <img src="./assets/images/project1.png" alt="Project 1">
                     </div>
-                    <h3>Computer Vision for Medical Diagnosis</h3>
-                    <p>Deep learning model for automated disease detection in medical imaging using CNN architecture.</p>
+                    <h3>Book Sharing Platform</h3>
+                    <p>A platform for sharing books and making it available for other people.</p>
                     <div class="tech-tags">
-                        <span>PyTorch</span>
-                        <span>CNN</span>
-                        <span>Medical AI</span>
+                        <span>ReactJs</span>
+                        <span>NodeJs</span>
+                        <span>MongoDB</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="btn">View Paper</a>
-                        <a href="#" class="btn">GitHub</a>
+                        <!-- <a href="#" class="btn">View Paper</a> -->
+                        <a href="https://github.com/tryadav1176/book_sharing_platform.git" class="btn">GitHub</a>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/images/project2.jpg" alt="AI Project 2">
+                        <img src="./assets/images/project2.png" alt="Project 2">
                     </div>
-                    <h3>NLP-Powered Market Analysis</h3>
-                    <p>Sentiment analysis and market trend prediction using transformer models and financial data.</p>
+                    <h3>Library Management System </h3>
+                    <p>Allows users to manage a simple database of books.
+                        It helps them to add, view, edit, and delete book entries using a user-friendly web interface.
+                    </p>
                     <div class="tech-tags">
-                        <span>BERT</span>
-                        <span>NLP</span>
-                        <span>Financial ML</span>
+                        <span>Python</span>
+                        <span>Flask</span>
+                        <span>MySql</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="btn">Case Study</a>
-                        <a href="#" class="btn">Demo</a>
+                        <!-- <a href="#" class="btn">Case Study</a> -->
+                        <a href="https://github.com/tryadav1176/library_management_system.git" class="btn">Github</a>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/images/project3.jpg" alt="AI Project 3">
+                        <img src="./assets/images/project3.png" alt="Project 3">
                     </div>
-                    <h3>Reinforcement Learning for Robotics</h3>
-                    <p>Training robotic systems to learn optimal control policies using deep reinforcement learning.</p>
+                    <h3>ChirpStack app is a Django-based Tweet Manager </h3>
+                    <p>a mini version of Twitter built to help you learn Django’s core concepts through a CRUD (Create, Read, Update, Delete) application.</p>
                     <div class="tech-tags">
-                        <span>RL</span>
-                        <span>TensorFlow</span>
-                        <span>Robotics</span>
+                        <span>Python</span>
+                        <span>Django</span>
+                        <span>Bootstrap</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="btn">Research</a>
-                        <a href="#" class="btn">GitHub</a>
+                        <!-- <a href="#" class="btn">Research</a> -->
+                        <a href="https://github.com/tryadav1176/ChirpStack.git" class="btn">GitHub</a>
                     </div>
                 </div>
             </div>
