changing the skills section adding more skills

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,10 +47,13 @@
                 <p>Transforming data into intelligent solutions through <span class="typed-text"></span></p>
                 <div class="tech-stack">
                     <span>Python</span>
-                    <span>TensorFlow</span>
-                    <span>PyTorch</span>
-                    <span>Scikit-learn</span>
-                    <span>Deep Learning</span>
+                    <span>Machine Learning</span>
+                    <span>Artificial Intelligence</span>
+                    <span>Full Stack MERN</span>
+                    <span>MySql</span>
+                    <span>MongoDB</span>
+                    <span>AWS</span>
+                    
                 </div>
                 <div class="image">
                     <a href="https://linkedin.com/in/tejasyadav1512">
