updated the about me section in the portfolio

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -70,7 +70,7 @@
         <section class="About" id="about" data-aos="fade-up">
             <h2>About Me</h2>
             <div class="about-content">
-                <p>As an AI/ML Engineer and Data Scientist, I specialize in developing intelligent systems and deriving meaningful insights from complex datasets. With expertise in deep learning, natural language processing, and computer vision, I create solutions that drive innovation and business value.</p>
+                <p>I’m a passionate Full-Stack Developer and AI enthusiast with a mission to create real-world impact through intelligent systems. With hands-on experience in frontend and backend development, machine learning, and cloud infrastructure, I bridge the gap between data-driven intelligence and user-friendly design. From building crop recommendation systems to deploying serverless applications on AWS and exploring LLM security, I thrive on solving complex challenges through code. Currently aiming for top-tier tech roles, I’m focused on integrating AI into full-stack projects that matter. When I’m not building tech, I’m likely crafting a clean UI or pushing limits in the gym.</p>
                 
                 <div class="expertise-grid">
                     <div class="expertise-card">
@@ -103,10 +103,10 @@
                     <div class="expertise-card">
                         <h3>Web Development</h3>
                         <ul>
-                            <li>Html</li>
-                            <li>Css</li>
-                            <li>Javascript</li>
-                            <li></li>
+                            <li>Frontend</li>
+                            <li>Backend</li>
+                            <li>Databases</li>
+                            <li>Cloud Platforms</li>
                         </ul>
                     </div>
                 </div>
@@ -197,10 +197,10 @@
                 </div>
                 
                 <div class="skills-category">
-                    <h3>Data Engineering</h3>
+                    <h3>Web Development</h3>
                     <div class="skill-item">
                         <div class="skill-info">
-                            <span>Apache Spark</span>
+                            <span>Frontend</span>
                             <span>80%</span>
                         </div>
                         <div class="skill-bar">
@@ -209,7 +209,7 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-info">
-                            <span>Hadoop</span>
+                            <span>Backend</span>
                             <span>75%</span>
                         </div>
                         <div class="skill-bar">
@@ -218,7 +218,7 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-info">
-                            <span>Docker</span>
+                            <span>Database</span>
                             <span>85%</span>
                         </div>
                         <div class="skill-bar">
