updated the info about the contact form and added some social links

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -337,16 +337,16 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:your.email@example.com">tryadav0812@gmail.com</a>
+                            <a href="mailto:tryadav0812@gmail.com">tryadav0812@gmail.com</a>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Pune, Maharashtra, India</span>
                         </div>
-                        <div class="contact-item">
+                        <!-- <div class="contact-item">
                             <i class="fas fa-globe"></i>
                             <a href="https://yourwebsite.com" target="_blank">yourwebsite.com</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <form class="contact-form">
@@ -377,13 +377,13 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="#" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/tryadav1176" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/tejasyadav1512" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="#" target="_blank" aria-label="Google Scholar"><i class="fab fa-google"></i></a>
                 <a href="#" target="_blank" aria-label="Medium"><i class="fab fa-medium"></i></a>
                 <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2024 Your Name | AI/ML Engineer & Data Scientist</p>
+            <p>&copy; 2024 Tejas Yadav | AI/ML Engineer & Data Scientist & Web Developer</p>
         </div>
     </footer>
 
