updated the code file

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -36,7 +36,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <button class="theme-toggle" aria-label="Toggle theme">
-            <i class="fas fa-sun"></i>
+            <i class="fas fa-sun">I</i>
         </button>
     </nav>
 
@@ -349,7 +349,7 @@
                         </div> -->
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" method="post">
                     <div class="form-group">
                         <input type="text" placeholder="Your Name" required>
                     </div>
