added the experience section in the website.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,6 +30,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <!-- <li><a href="#publications">Publications</a></li> -->
+             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-expanded="false" aria-label="Toggle navigation menu">
@@ -327,6 +328,20 @@
                 <a href="https://scholar.google.com/youraccount" target="_blank" class="btn primary-btn">View All Publications <i class="fas fa-arrow-right"></i></a>
             </div>
         </section> -->
+
+        <section id="experience" class="experience" data-aos="fade-up">
+            <h2>Professional Experiences</h2>
+            <div class="experience-list">
+                <div class="experience-card">
+                    <h3>AICTE Edunet Foundation</h3>
+                    <p>Thrilled to share that I have successfully completed a 4-week virtual internship on Artificial Intelligence and Data Analytics with a focus on Green Skills, organized by AICTE, Shell India Markets Pvt. Ltd., and Edunet Foundation under the Skills4Future program!</p>
+                    <p>From 20th January to 20th February 2025, this internship provided me with hands-on exposure to real-world applications of AI and data analytics, while also emphasizing sustainable and green skill development.</p>
+                    <p>"As part of the internship, I worked on applying Artificial Intelligence and Data Analytics techniques to real-world sustainability challenges. The project involved analyzing data to derive actionable insights, promoting the use of green technologies, and understanding how AI can support environmentally responsible decision-making."</p>
+                    <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">Github</a>
+                    <a href="" class="btn">Read Paper </a>
+                </div>
+            </div>
+        </section>
 
         <section id="contact" class="contact" data-aos="fade-up">
             <h2>Let's Collaborate</h2>
