--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -333,12 +333,14 @@
             <h2>Professional Experiences</h2>
             <div class="experience-list">
                 <div class="experience-card">
-                    <h3>AICTE Edunet Foundation</h3>
+                    <h3>AICTE, Edunet Foundation</h3>
                     <p>Thrilled to share that I have successfully completed a 4-week virtual internship on Artificial Intelligence and Data Analytics with a focus on Green Skills, organized by AICTE, Shell India Markets Pvt. Ltd., and Edunet Foundation under the Skills4Future program!</p>
-                    <p>From 20th January to 20th February 2025, this internship provided me with hands-on exposure to real-world applications of AI and data analytics, while also emphasizing sustainable and green skill development.</p>
-                    <p>"As part of the internship, I worked on applying Artificial Intelligence and Data Analytics techniques to real-world sustainability challenges. The project involved analyzing data to derive actionable insights, promoting the use of green technologies, and understanding how AI can support environmentally responsible decision-making."</p>
-                    <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">Github</a>
-                    <a href="" class="btn">Read Paper </a>
+                    <p>This internship provided me with hands-on exposure to real-world applications of AI and data analytics, while also emphasizing sustainable and green skill development.</p>
+                    <p>"As part of the internship, I worked on applying Artificial Intelligence and Data Analytics techniques to real-world sustainability challenges. The project involved building a 'Crop nad Fertilizer Recommendation System using MAchine Learning' promoting the use of green technologies, and understanding how AI can support environmentally responsible decision-making."</p>
+                    <div class="experience-cta">
+                        <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">Github</a>
+                    <a href="https://www.irjet.net/archives/V8/i4/PIT/ICIETET-64.pdf" class="btn">Read Paper </a>
+                    </div>
                 </div>
             </div>
         </section>
