added the styling for the light mode

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Font Awesome for icons -->
-    <script src="https://kit.fontawesome.com/3a88caa6a3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- TypedJS for typing animation -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <!-- Google Fonts -->
@@ -37,7 +37,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <button class="theme-toggle" aria-label="Toggle theme">
-            <i class="fas fa-sun">I</i>
+            <i class="fas fa-sun"></i>
         </button>
     </nav>
 
@@ -396,9 +396,9 @@
             <div class="social-links">
                 <a href="https://github.com/tryadav1176" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/tejasyadav1512" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank" aria-label="Google Scholar"><i class="fab fa-google"></i></a>
-                <a href="#" target="_blank" aria-label="Medium"><i class="fab fa-medium"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <!-- <a href="#" target="_blank" aria-label="Google Scholar"><i class="fab fa-google"></i></a> -->
+                <a href="https://open.spotify.com/user/31552n3jfitfgmzsmqah7w4xuzmu" target="_blank" aria-label="Spotify"><i class="fa-brands fa-spotify"></i></a>
+                <a href="https://x.com/tejasyadav1512" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
             <p>&copy; 2024 Tejas Yadav | AI/ML Engineer & Data Scientist & Web Developer</p>
         </div>
