Added a new Project in the Project List.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -283,7 +283,7 @@
                         <img src="./assets/images/project3.png" alt="Project 3">
                     </div>
                     <h3>ChirpStack app is a Django-based Tweet Manager </h3>
-                    <p>a mini version of Twitter built to help you learn Django’s core concepts through a CRUD (Create, Read, Update, Delete) application.</p>
+                    <p>A mini version of Twitter built to help you learn Django’s core concepts through a CRUD (Create, Read, Update, Delete) application.</p>
                     <div class="tech-tags">
                         <span>Python</span>
                         <span>Django</span>
@@ -292,6 +292,23 @@
                     <div class="project-links">
                         <!-- <a href="#" class="btn">Research</a> -->
                         <a href="https://github.com/tryadav1176/ChirpStack.git" class="btn">GitHub</a>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./assets/images/project4.png" alt="Project 4">
+                    </div>
+                    <h3>Wayfare - Interactive Travel Itinerary Board </h3>
+                    <p>Wayfare gives you a drag-and-drop itinerary board to organize, reschedule, and visualize your trips with ease—perfect for solo wanderers and travel planners alike.</p>
+                    <div class="tech-tags">
+                        <span>Html</span>
+                        <span>Css</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://wayfare-travel-scheduler.vercel.app/" class="btn">Visit</a>
+                        <a href="https://github.com/tryadav1176/wayfare-travel-scheduler.git" class="btn">GitHub</a>
                     </div>
                 </div>
             </div>
