--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,7 +30,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <!-- <li><a href="#publications">Publications</a></li> -->
-             <li><a href="#experience">Experience</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <button class="mobile-menu-btn" aria-expanded="false" aria-label="Toggle navigation menu">
@@ -299,15 +299,15 @@
                     <div class="project-image">
                         <img src="./assets/images/project4.png" alt="Project 4">
                     </div>
-                    <h3>Wayfare - Interactive Travel Itinerary Board </h3>
+                    <h3>Wayfare - Interactive Travel Itinerary Board</h3>
                     <p>Wayfare gives you a drag-and-drop itinerary board to organize, reschedule, and visualize your trips with ease—perfect for solo wanderers and travel planners alike.</p>
                     <div class="tech-tags">
                         <span>Html</span>
                         <span>Css</span>
-                        <span>JavaScript</span>
+                        <span>Javascript</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://wayfare-travel-scheduler.vercel.app/" class="btn">Visit</a>
+                        <a href="https://wayfare-travel-scheduler.vercel.app/" class="btn">Visit<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         <a href="https://github.com/tryadav1176/wayfare-travel-scheduler.git" class="btn">GitHub</a>
                     </div>
                 </div>
