doing some changes in style

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -307,7 +307,7 @@
                         <span>Javascript</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://wayfare-travel-scheduler.vercel.app/" class="btn">Visit<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://wayfare-travel-scheduler.vercel.app/" class="btn">Visit <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         <a href="https://github.com/tryadav1176/wayfare-travel-scheduler.git" class="btn">GitHub</a>
                     </div>
                 </div>
@@ -350,7 +350,9 @@
             <h2>Professional Experiences</h2>
             <div class="experience-list">
                 <div class="experience-card">
-                    <h3>AICTE, Edunet Foundation</h3>
+                    <div class="exp-header">
+                        <h3>AICTE, Edunet Foundation</h3>
+                    </div>
                     <p>Thrilled to share that I have successfully completed a 4-week virtual internship on Artificial Intelligence and Data Analytics with a focus on Green Skills, organized by AICTE, Shell India Markets Pvt. Ltd., and Edunet Foundation under the Skills4Future program!</p>
                     <p>This internship provided me with hands-on exposure to real-world applications of AI and data analytics, while also emphasizing sustainable and green skill development.</p>
                     <p>"As part of the internship, I worked on applying Artificial Intelligence and Data Analytics techniques to real-world sustainability challenges. The project involved building a 'Crop nad Fertilizer Recommendation System using MAchine Learning' promoting the use of green technologies, and understanding how AI can support environmentally responsible decision-making."</p>
