Added the thoughts sections.

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="image">
                     <a href="https://linkedin.com/in/tejasyadav1512">
-                    <img src="./assets/images/profile 1.jpg" alt="Profile" class="profile-image">
+                    <img src="./assets/images/profile.jpg" alt="Profile" class="profile-image">
                     </a>
                 </div>
                 <div class="hero-cta">
@@ -360,6 +360,26 @@
                         <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">Github</a>
                     <a href="https://www.irjet.net/archives/V8/i4/PIT/ICIETET-64.pdf" class="btn">Read Paper </a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="thought" class="thoughts" data-aos="fade-up">
+            <h2>Thoughts</h2>
+            <div class="thought-list">
+                <div class="thought-card">
+                    <p><span>❝</span> Code is like humor. When you have to explain it, it's bad! <span>❞</span></p>
+                </div>
+                <div class="thought-card">
+                    <p><span>❝</span> The best error message is the one that never shows up. <span>❞</span></p>
+                </div>
+                <div class="thought-card">
+                    <p><span>❝</span> It's OK to figure out murder mysteries, but you shouldn't
+                        need to figure out code. You should be able to read it. <span>❞</span>
+                    </p>
+                </div>
+                <div class="thought-card">
+                    <p><span>❝</span> Programmers are tools for converting caffeine into code. <span>❞</span></p>
                 </div>
             </div>
         </section>
