Completed the thoughts section

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -36,9 +36,9 @@
         <button class="mobile-menu-btn" aria-expanded="false" aria-label="Toggle navigation menu">
             <i class="fas fa-bars"></i>
         </button>
-        <button class="theme-toggle" aria-label="Toggle theme">
+        <!-- <button class="theme-toggle" aria-label="Toggle theme">
             <i class="fas fa-sun"></i>
-        </button>
+        </button> -->
     </nav>
 
     <main>
@@ -292,6 +292,23 @@
                     <div class="project-links">
                         <!-- <a href="#" class="btn">Research</a> -->
                         <a href="https://github.com/tryadav1176/ChirpStack.git" class="btn">GitHub</a>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="./assets/images/project5.png" alt="Project5">
+                    </div>
+                    <h3>Crop & Fertilizer Recommendation System</h3>
+                    <p>The Crop and Fertilizer Recommendation System is a machine learning-based web application designed to help farmers and agricultural enthusiasts make informed decisions.</p>
+                    <div class="tech-tags">
+                        <span>Python</span>
+                        <span>Flask</span>
+                        <span>Machine Learning</span>
+                    </div>
+                    <div class="project-links">
+                        <!-- <a href="#" class="btn">Research</a> -->
+                        <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">GitHub</a>
                     </div>
                 </div>
 
