--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -398,6 +398,13 @@
                 <div class="thought-card">
                     <p><span>❝</span> Programmers are tools for converting caffeine into code. <span>❞</span></p>
                 </div>
+                <div class="thought-card">
+                    <p><span>❝</span> Talent without Work is <strong>Nothing.</strong> - Ronaldo <span>❞</span></p>
+                </div>
+                <div class="thought-css">
+                    <p><span>❝</span> Always choose harder right over easier wrong and never let your wishbone grow 
+                        where a backboard should be.<span>❞</span></p>
+                </div>
             </div>
         </section>
 
