--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -366,24 +366,40 @@
         <section id="experience" class="experience" data-aos="fade-up">
             <h2>Professional Experiences</h2>
             <div class="experience-list">
+
                 <div class="experience-card">
-                    <div class="exp-header">
-                        <h3>AICTE, Edunet Foundation</h3>
+                    <h3>Bijlani Corp. Pvt. Ltd., Pune</h3>
+                    <p class="experience-card-meta">Full-Stack Associate Trainee (Generalist) (Feb 2025) - Present</p>
+                    <div class="experience-type">
+                        <span>Internship</span>
                     </div>
-                    <p>Thrilled to share that I have successfully completed a 4-week virtual internship on Artificial Intelligence and Data Analytics with a focus on Green Skills, organized by AICTE, Shell India Markets Pvt. Ltd., and Edunet Foundation under the Skills4Future program!</p>
-                    <p>This internship provided me with hands-on exposure to real-world applications of AI and data analytics, while also emphasizing sustainable and green skill development.</p>
-                    <p>"As part of the internship, I worked on applying Artificial Intelligence and Data Analytics techniques to real-world sustainability challenges. The project involved building a 'Crop nad Fertilizer Recommendation System using MAchine Learning' promoting the use of green technologies, and understanding how AI can support environmentally responsible decision-making."</p>
+                    <p class="internship-summary">" "</p>
                     <div class="experience-cta">
-                        <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">Github</a>
-                    <a href="https://www.irjet.net/archives/V8/i4/PIT/ICIETET-64.pdf" class="btn">Read Paper </a>
+                        <a href="https://www.avinforsaksh.in/" class="btn">Project</a>
                     </div>
                 </div>
+
+                <div class="experience-card">
+                    <h3>AICTE, Edunet Foundation, Pune</h3>
+                    <p class="experience-card-meta">Artificial Intelligence and Data Analytics (Jan - Feb 2025)</p>
+                    <div class="experience-type">
+                        <span>Internship</span>
+                    </div>
+                    <p class="internship-summary">"As part of the internship, I worked on applying Artificial Intelligence and Data Analytics techniques to real-world sustainability challenges. The project involved building a 'Crop nad Fertilizer Recommendation System using MAchine Learning' promoting the use of green technologies, and understanding how AI can support environmentally responsible decision-making."</p>
+                    <div class="experience-cta">
+                        <a href="https://github.com/tryadav1176/Crop_Fertilizer_RS.git" class="btn">Github</a>
+                        <a href="https://www.irjet.net/archives/V8/i4/PIT/ICIETET-64.pdf" class="btn">Read Paper </a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
         <section id="thought" class="thoughts" data-aos="fade-up">
             <h2>Thoughts</h2>
             <div class="thought-list">
+                <div class="thought-card"></div>
+
                 <div class="thought-card">
                     <p><span>❝</span> Code is like humor. When you have to explain it, it's bad! <span>❞</span></p>
                 </div>
@@ -401,10 +417,28 @@
                 <div class="thought-card">
                     <p><span>❝</span> Talent without Work is <strong>Nothing.</strong> - Ronaldo <span>❞</span></p>
                 </div>
-                <div class="thought-css">
+                <div class="thought-card">
                     <p><span>❝</span> Always choose harder right over easier wrong and never let your wishbone grow 
                         where a backboard should be.<span>❞</span></p>
                 </div>
+                <div class="thought-card">
+                    <p><span>❝</span>You don't need LUCK, You need PREPARATION.
+                        You don't need TALENT, You need to WORK HARD.
+                        You don't need to know everything BEFOREHAND, You just need to START.
+                    <span>❞</span></p>
+                </div>
+
+                <div class="thought-card"></div>
+
+                <!-- <div class="thought-card">
+                    <p><span>❝</span>
+                    Uncle Iroh once said: If you only started YOUNGER, Then you would've been so MUCH BETTER.
+                    If only you started EARLIER, A lot of things would've been Changed.
+                    But here's the thing, TODAY is the youngest you will ever be, You need to start NOW.
+                    The best time to plant a tree might be a year ago Or three years ago.
+                    But, the second best time is TODAY.
+                    <span>❞</span></p>
+                </div> -->
             </div>
         </section>
 
@@ -463,7 +497,7 @@
                 <a href="https://open.spotify.com/user/31552n3jfitfgmzsmqah7w4xuzmu" target="_blank" aria-label="Spotify"><i class="fa-brands fa-spotify"></i></a>
                 <a href="https://x.com/tejasyadav1512" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2024 Tejas Yadav | AI/ML Engineer & Data Scientist & Web Developer</p>
+            <p>&copy; 2025 Tejas Yadav | AI/ML Engineer & Data Scientist & Web Developer</p>
         </div>
     </footer>
 
