Updated the styling in the portfolio website

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -398,7 +398,7 @@
         <section id="thought" class="thoughts" data-aos="fade-up">
             <h2>Thoughts</h2>
             <div class="thought-list">
-                <div class="thought-card"></div>
+                <!-- <div class="thought-card"></div> -->
 
                 <div class="thought-card">
                     <p><span>❝</span> Code is like humor. When you have to explain it, it's bad! <span>❞</span></p>
@@ -428,7 +428,7 @@
                     <span>❞</span></p>
                 </div>
 
-                <div class="thought-card"></div>
+                <!-- <div class="thought-card"></div> -->
 
                 <!-- <div class="thought-card">
                     <p><span>❝</span>
@@ -440,6 +440,7 @@
                     <span>❞</span></p>
                 </div> -->
             </div>
+            
         </section>
 
         <section id="contact" class="contact" data-aos="fade-up">
