--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="image">
                     <a href="https://linkedin.com/in/tejasyadav1512">
-                    <img src="assets\images\Profile.jpg" alt="Profile" class="profile-image">
+                    <img src="assets/images/Profile.jpg" alt="Profile" class="profile-image">
                     </a>
                 </div>
                 <div class="hero-cta">
