--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
                     
                 </div>
                 <div class="image">
-                    <a href="https://linkedin.com/in/tejasyadav1512">
-                    <img src="./assets/images/profile.jpg" alt="Profile" class="profile-image">
-                    </a>
+                    <!-- <a href="https://linkedin.com/in/tejasyadav1512"></a> -->
+                    <img src="./assets/images/profile.jpg" href="https://linkedin.com/in/tejasyadav1512" alt="Profile" class="profile-image">
                 </div>
                 <div class="hero-cta">
                     <a href="#contact" class="btn primary-btn">Get in Touch</a>
