--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                     
                 </div>
                 <div class="image">
-                    <!-- <a href="https://linkedin.com/in/tejasyadav1512"></a> -->
-                    <img src="./assets/images/profile.jpg" href="https://linkedin.com/in/tejasyadav1512" alt="Profile" class="profile-image">
+                    <a href="https://linkedin.com/in/tejasyadav1512">
+                        <img src="assets/images/profile.jpg" alt="Profile" class="profile-image">
+                    </a>
                 </div>
                 <div class="hero-cta">
                     <a href="#contact" class="btn primary-btn">Get in Touch</a>
