adjusted the text alignment in the thought card list

--- a/index.html
+++ b/index.html
@@ -369,11 +369,13 @@
 
                 <div class="experience-card">
                     <h3>Bijlani Corp. Pvt. Ltd., Pune</h3>
-                    <p class="experience-card-meta">Full-Stack Associate Trainee (Generalist) (Feb 2025) - Present</p>
+                    <p class="experience-card-meta">Full-Stack Associate Trainee (Generalist) (Feb 2025 - Present)</p>
                     <div class="experience-type">
                         <span>Internship</span>
                     </div>
-                    <p class="internship-summary">" "</p>
+                    <p class="internship-summary">
+                        "As part of my role at Bijlani Corp, I am working as a Full-Stack Associate Trainee, contributing to the end-to-end development of web applications. My responsibilities include designing responsive front-end interfaces using React and Tailwind CSS, building scalable APIs with Node.js and Express, and integrating backend services with databases like MongoDB. The internship emphasizes full-stack project lifecycle understanding, collaborative development practices, and deployment using cloud-based platforms such as AWS and Vercel."
+                    </p>
                     <div class="experience-cta">
                         <a href="https://www.avinforsaksh.in/" class="btn">Project</a>
                     </div>
