--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <nav>
         <ul>
-            <li><a href="#">Portfolio</a></li>
+            <!-- <li><a href="#">Portfolio</a></li> -->
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
