--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
                         <img src="./assets/images/project1.png" alt="Project 1">
                     </div>
                     <h3>Book Sharing Platform</h3>
-                    <p>A platform for sharing books and making it available for other people.</p>
+                    <p>A platform for sharing books and making it available for other people. 
+                       Helps users to share, delete, upload book covers. 
+                    </p>
                     <div class="tech-tags">
                         <span>ReactJs</span>
                         <span>NodeJs</span>
